ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/SourceUnits/parserErrorRecovery_SourceUnit1/input.ts.stderr
error[1005]: Expected '}'
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/SourceUnits/parserErrorRecovery_SourceUnit1/input.ts:3:1
  |
3 | }
  | ^

